Gradle management cleanup (#8)
* Gradle management cleanup

* Comment out dependency-analysis, since it needs a different jvm version to run

* Reduce memory consumption in tests

* Fix UnusedPrivateMember and gradle

* Gradle 8.6