@@ -1,8 +1,18 @@
 plugins {
-    kotlin("jvm") version "1.9.22"
-    kotlin("plugin.serialization") version "1.9.22"
-    id("io.gitlab.arturbosch.detekt") version "1.23.4"
+    kotlin("jvm")
+    kotlin("plugin.serialization")
+    id("io.gitlab.arturbosch.detekt")
+    // id("com.autonomousapps.dependency-analysis")
 }
+
+// main
+val kotlinVersion: String by project
+val kotlinSerializationVersion: String by project
+// test
+val junitVersion: String by project
+val jqwikVersion: String by project
+// quality
+val detektVersion: String by project
 
 group = "eu.pieland"
 version = "1.0-SNAPSHOT"
@@ -12,20 +22,25 @@ repositories {
 }
 
 dependencies {
-    detektPlugins("io.gitlab.arturbosch.detekt:detekt-rules-libraries:1.23.4")
+    detektPlugins("io.gitlab.arturbosch.detekt:detekt-rules-libraries:$detektVersion")
 
-    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-core:$kotlinSerializationVersion")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlinSerializationVersion")
 
-    testImplementation(kotlin("test"))
-    testImplementation(platform("org.junit:junit-bom:5.10.1"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
-    testImplementation("net.jqwik:jqwik-kotlin:1.8.2")
+    testImplementation(kotlin("test:$kotlinVersion"))
+
+    testImplementation(platform("org.junit:junit-bom:$junitVersion"))
+    testImplementation("org.junit.jupiter:junit-jupiter:$junitVersion")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:$junitVersion")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:$junitVersion")
+
+    testImplementation("net.jqwik:jqwik-api:$jqwikVersion")
+    testImplementation("net.jqwik:jqwik-kotlin:$jqwikVersion")
 }
 
 tasks.test {
     minHeapSize = "2g"
     maxHeapSize = "4g"
-    jvmArgs = listOf("-XX:MaxPermSize=1g")
     useJUnitPlatform {
         includeEngines("junit-jupiter", "jqwik")
         excludeTags("slow")
@@ -36,3 +51,13 @@ kotlin {
     explicitApi()
     jvmToolchain(8)
 }
+
+//dependencyAnalysis {
+//    issues {
+//        all {
+//            onAny {
+//                exclude("org.jetbrains.kotlin:kotlin-test")
+//            }
+//        }
+//    }
+//}
